# weave

./: .gitignore  CMakeLists.txt  README.md  audio.hpp  cursor.hpp  layout.hpp  main copy.cpp  main.cpp  mini_audio_impl.cpp  spiral.hpp  ui_tree.hpp  vec.hpp
core/: app_state.hpp  application.hpp  application_context.hpp  backend.hpp  core.hpp  layout.hpp  lens.hpp  ui_tree.hpp  view.hpp  widget.hpp  window.hpp
events/: keyboard.hpp  keys.def  mouse_events.hpp
examples/: PmSynth.hpp  SpringSim.hpp
examples/Calculator/: Calculator.hpp
examples/MusicPlayer/: CMakeLists.txt  Model.hpp  MusicPlayer.hpp  main.cpp
examples/PmSynth/: App.hpp  PmSynth.hpp
examples/Sampler/: Sampler.hpp
examples/Sequencer/: Sequencer.hpp
examples/SpringSim/: SpringSim.hpp  SpringSimModel.hpp
examples/TextureSynthesis/: TextureSynthesis.hpp
geometry/: angles.hpp  geometry.hpp  rectangle.hpp  shapes.hpp
graphics/: color.hpp  graphics.cpp  graphics.hpp  image.hpp
linalg/: gen-operators.hpp  matrix.hpp  test.cpp  vec.hpp
misc/: default_font_embed  mini_audio_impl.cpp
util/: dyn_trait.hpp  fwd.hpp  gen-operators.hpp  ignore.hpp  iota.hpp  meta.hpp  optional.hpp  tuple.hpp  util.hpp  variant.hpp  vec.hpp
views/: button.hpp  combo_box.hpp  composite.hpp  dialogs.hpp  either.hpp  fields.hpp  for_each.hpp  geometry.hpp  image.hpp  layout.hpp  list.hpp  maybe.hpp  modifiers.hpp  numeric_field.hpp  popup_menu.hpp  progress.hpp  progress_bar.hpp  scrollable.hpp  selectable.hpp  slider.hpp  table.hpp  text.hpp  toggle_button.hpp  views.hpp  views_core.hpp  vocabulary.hpp  zstack.hpp
widgets/: button.hpp
